ALL: Many changes. Closer to networked movement.
- Needs server state change for all players when the match starts

--- a/RTT_Client_OGRE/Release/makefile
+++ b/RTT_Client_OGRE/Release/makefile
@@ -44,7 +44,7 @@ all: RTT_Client_OGRE
 RTT_Client_OGRE: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -L../../RTT_Client_Core/Release/ -o "RTT_Client_OGRE" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L../../RTT_Client_Core/Release/ -L../../RTT_Common/Release/ -o "RTT_Client_OGRE" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
